--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,7 @@ phases:
   install:
     commands:
       - echo "Nothing to install."
+      - pip install matplotlib
   build:
     commands:
       - echo Build started on `date`
